# galacritty

./: .gitignore  .gitmodules  Cargo.toml  README.md  icons.sh
src/: font.rs  main.rs  util.rs  widget.rs
