[package]
name = "galacritty"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Terminal", "Console", "GTK" ]
description = "GTK 3 terminal emulator based on the GPU-accelerated Alacritty core"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/galacritty"
repository = "https://github.com/myfreeweb/galacritty"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.5"
glib = "0.6"
gio = "0.5"
gdk = "0.9"
pango = "0.5"
gtk = { version = "0.5", features = ["v3_16"] }
epoxy = "0.1"
shared_library = "0"
alacritty = { path = "alacritty" }

[patch.crates-io]
servo-freetype-sys = { path = "alacritty/servo-freetype-proxy" }
